2004-05-01  Richard Hult  <richard@imendio.com>

	* src/planner-cmd-manager.c (cmd_manager_free_func): Add commented
	out code to free the base command, need to add this when the rest
	of the code is fixed.

	* libplanner/mrp-day.c: (mrp_day_add): Clean a bit.

	* src/planner-day-type-dialog.c: Implement undo/redo. Use the day
	id instead of the pointer to identify day types.

2004-05-01 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-dialog.c: implemented undo for resource calendar 
	in the resource editor dialog.

2004-05-01 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-dialog.c: implemented undo for resource note
	in the resource editor dialog.

2004-04-29  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* libplanner/mrp-task-manager.c:
	(mrp_task_manager_calculate_task_work):
	Added the assignement units to the duration to work convertion.

2004-04-28  Tomasz Kłoczko <kloczek@pld.org.pl>

	* configure.in: remove AC_SUBST() for CFLAGS, CPPFLAGS, LDFLAGS
	(this variables are substed by default).

2004-04-27  Richard Hult  <richard@imendio.com>

	* docs/user-guide/C: Update from Kurt. Fixes bug #140330.

	* Fix bug #132453. Based on patch from Lincoln Phipps.

2004-04-27  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* acinclude.m4:
	Added checks for python environment (taken out from pygtk).

	* configure.in:
	Updated the python binding and added the python module.

	* Makefile.am:
	Added conditional python binding build.

	* data/ui/Makefile.am:
	* data/ui/python-plugin.ui:
	Added the python-plugin menu entry.

	* python/Makefile.am:
	Changed the planner module name and cleaned flags.

	* python/planner-arg-types.py:
	Created from planner-arg-types.defs.

	* python/planner.defs:
	Added insert_task default parameters.

	* python/test.py:
	Example script for python binding and python module.

	* src/Makefile.am:
	Added the planner-python-plugin.

	* src/planner-python-plugin.c:
	Created a plugin to get python scripting in planner.
