@@ -1,6 +1,6 @@
 INCLUDES = \
 	-I. -I$(top_srcdir) \
-	$(LIBPLANNER_CFLAGS) \
+	$(LIBPLANNER_CFLAGS) $(WARN_CFLAGS) \
 	-DMRP_STORAGEMODULEDIR=\""$(libdir)/planner/storage-modules"\" \
 	-DMRP_FILE_MODULES_DIR=\""$(libdir)/planner/file-modules"\"
 
