@@ -1,3 +1,9 @@
+2004-05-02  Richard Hult  <richard@imendio.com>
+
+	* libplanner/Makefile.am:
+	* libplanner/mrp-object.c: (mrp_object_set_id):
+	* src/Makefile.am: Add back the warning flags and fix a warning.
+
 2004-05-01  Richard Hult  <richard@imendio.com>
 
 	* src/planner-cmd-manager.c (cmd_manager_free_func): Add commented
